<resources>
    <string name="app_name">MarIvram Choir</string>
    <string name="image_hymns">All Hymns</string>
    <string name="Hymns">All Hymns</string>
    <string name="describeHymns">ترانيم العروض </string>
    <string name="allAlbumes">MarIvram Albumes</string>
    <string name="marIvram_albumes">جميع الالبومات</string>
    <string name="create">Create Servant</string>
    <string name="create_details">"تجميع الترانيم لعرض معين "</string>
    <string name="about">About Team</string>
    <string name="about_desc">كورال مارافرام السريانى</string>
    <string name="add_desc">اضف ترنيمه</string>
    <string name="add_tarnima">Add Tarnima</string>
    <string name="add_tarnima_arabic">اضافة تفاصيل الترنيمه</string>
    <string name="hymen_name">اسم الترنيمه</string>
    <string name="app_name_arabic">كورال مارافرام السريانى</string>
    <string name="hymen_url">اللينك ....</string>
    <string name="hymen_type_txt">اختر نوع الترنيمه</string>
    <string name="hymen_words">كلمات الترنيمه</string>
    <string name="user_name">User Name</string>
    <string name="login_desc">login to add tranim</string>
    <string name="login">login</string>
    <string name="all_albums">Albums</string>
    <string name="first_album">ساكن فى علاه</string>
    <string name="show">Move to Album</string>
    <string name="fifth_album">سمو الملك</string>
    <string name="fourth_album">كنيسة زمان</string>
    <string name="third_album">انا متطمن</string>
    <string name="second_album">هيستجيب</string>
    <string name="empty_list">لا توجد بيانات</string>
    <string name="create_servant_arabic">تجميع الترانيم لخدمه معينه</string>
    <string name="servant_name">اسم الخدمه</string>
    <string name="servant_date">تاريخ الخدمه</string>
    <string name="servant_location">مكان الخدمه</string>
    <string name="add_servant">Create Servant</string>
    <string name="time">03:05 Pm</string>
    <string name="location">كنيستنا</string>
    <string name="praise_family">Praise Family</string>
    <string name="read_add">Tranim</string>
    <string name="praise_family_desc">برنامج كورال مارافرام السريانى - اسرة التسبيح - كنيسة لسيده العذراء مريم بالقصيرين برنامج مخصص لجميع ترانيم الكورال واسرة تسبيح من بدايتها </string>
    <string name="marivram_desc">كورال مارافرام السريانى هو كورال يتكون من جميع مراحل الكورالات ابتدائى - اعدادى - ثانوى - جامعه - خريجين و البرنامج هيساعدك تشوف وتعرف جميع ترانيم الكورال </string>
    <string name="read_add_desc">البرنامج بيسمحلك تشوف وتقرا الترانيم وتسمعها و تضيف ترانيم و تضيف خدمه معينه بأضافة الترانيم المختاره للخدمه </string>
    <string name="next">Next</string>
    <string name="login_title">Welcome Back</string>
    <string name="login_title_desc">We missed you ! Login to get Started</string>
    <string name="password">password</string>
    <string name="guest">Login as guest</string>
    <string name="help">Need Help?</string>
    <string name="remember_me">Remember Me</string>
    <string name="not_have_account">Don\'t have an account?</string>

    <string-array name="Albumes">
        <item>سمو الملك</item>
        <item>كنيسة زمان</item>
        <item>انا متطمن</item>
        <item>هيستجيب</item>
        <item>ساكن فى علاه</item>
        <item>ترانيم عروض</item>
    </string-array>


</resources>