<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.view.LoginActivity"
    android:background="@color/login_color">
  <com.google.android.material.appbar.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="120dp"
      android:fitsSystemWindows="true"
      android:theme="@style/loginTheme">
    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:id="@+id/collapsed_toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:title="@string/login"
        app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
        app:collapsedTitleTextAppearance="@style/Theme.MarIvramChoir"
        app:expandedTitleTextAppearance="@style/Theme.MarIvramChoir">
      <androidx.appcompat.widget.Toolbar
          android:layout_width="match_parent"
          android:layout_height="?attr/actionBarSize"
          app:layout_collapseMode="pin"/>
    </com.google.android.material.appbar.CollapsingToolbarLayout>

  </com.google.android.material.appbar.AppBarLayout>

  <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@drawable/second_bg_dashboard"
      app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <TextView
        android:id="@+id/tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/login_title"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"/>

    <TextView
        android:id="@+id/tittle_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/bold_gray_text"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/login_title_desc"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:layout_below="@id/tittle"
        />

    <LinearLayout
        android:id="@+id/login_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/tittle_desc"
        android:layout_marginTop="40dp"
        android:layout_centerVertical="true">
      <EditText
          android:id="@+id/user_name_edit"
          android:layout_width="match_parent"
          android:layout_height="52dp"
          android:layout_marginEnd="48dp"
          android:layout_marginStart="48dp"
          android:hint="@string/user_name"
          android:paddingStart="24dp"
          android:drawableEnd="@drawable/ic_person"
          android:paddingEnd="10dp"
          android:textColor="@color/black"
          android:background="@drawable/edit_text_bg"
          tools:ignore="RtlSymmetry"
          android:inputType="textPersonName"
          android:importantForAutofill="no" />

      <EditText
          android:id="@+id/password_edit"
          android:layout_width="match_parent"
          android:layout_height="52dp"
          android:layout_marginEnd="48dp"
          android:layout_marginStart="48dp"
          android:hint="@string/password"
          android:paddingStart="24dp"
          android:drawableEnd="@drawable/ic_password"
          android:paddingEnd="10dp"
          android:textColor="@color/black"
          android:background="@drawable/edit_text_bg"
          tools:ignore="RtlSymmetry"
          android:inputType="textPassword"
          android:importantForAutofill="no"
          android:layout_marginTop="20dp"/>

      <CheckBox
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="48dp"
          android:layout_marginTop="18dp"
          android:textSize="18sp"
          android:textColor="@color/black"
          android:text="@string/remember_me"/>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:orientation="horizontal"
          android:layout_weight="2"
          android:layout_marginTop="30dp"
          android:layout_marginLeft="48dp"
          android:layout_marginRight="48dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/help"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

        <Button
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="18sp"/>

      </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="70dp"
        android:layout_below="@id/login_panel">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="@color/black"
          android:textSize="18sp"
          android:layout_marginEnd="12dp"
          android:text="@string/not_have_account"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textColor="@color/login_color"
          android:textSize="18sp"
          android:layout_marginEnd="12dp"
          android:fontFamily="serif"
          android:textStyle="bold"
          android:text="@string/guest"/>
    </LinearLayout>
  </RelativeLayout>
  </androidx.core.widget.NestedScrollView>
  </androidx.coordinatorlayout.widget.CoordinatorLayout>