<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/app_name"
            android:textSize="18sp"/>
    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/logo_login"
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:src="@drawable/marivram_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"/>

    <TextView
        android:id="@+id/login_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_login"
        android:textColor="@color/gray_trans"
        android:text="@string/login_desc"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/add_tarnima_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_details"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        style="@style/AddTarnimaActivity"
        android:hint="@string/user_name"
        android:layout_marginTop="8dp"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />


</RelativeLayout>