<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.AlbumsActivity"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">
            <ImageButton
                android:id="@+id/arrow_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:background="#00000000"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:layout_centerVertical="true"
                android:contentDescription="@string/user_name"
                />
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="10dp"
                android:src="@drawable/marivram_logo"
                android:layout_centerVertical="true"
                android:contentDescription="@string/user_name"
                android:layout_alignParentEnd="true"
                />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:padding="10dp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/all_albums"
            android:fontFamily="serif"
            android:textColor="@color/bold_gray_text"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:background="@drawable/round_bk2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_album"
                    android:textSize="30sp"
                    android:padding="25dp"
                    android:fontFamily="casual"/>

                <Button
                    android:id="@+id/first_album"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:text="@string/show"
                    android:padding="20dp"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/marivram_logo"
                android:layout_marginTop="-5dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/app_name" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:background="@drawable/food_back">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/second_album"
                    android:textSize="30sp"                    android:padding="25dp"
                    android:fontFamily="casual"/>

                <Button
                    android:id="@+id/second_album"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:text="@string/show"
                    android:padding="20dp"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/marivram_logo"
                android:layout_marginTop="-5dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/app_name" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:background="@drawable/round_bk5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/third_album"
                    android:textSize="30sp"                    android:padding="25dp"
                    android:fontFamily="casual"/>

                <Button
                    android:id="@+id/third_album"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:text="@string/show"
                    android:padding="20dp"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/marivram_logo"
                android:layout_marginTop="-5dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/app_name" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:background="@drawable/round_bk3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fourth_album"
                    android:textSize="30sp"                    android:padding="25dp"
                    android:fontFamily="casual"/>

                <Button
                    android:id="@+id/fourth_album"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:text="@string/show"
                    android:padding="20dp"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/marivram_logo"
                android:layout_marginTop="-5dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/app_name" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:background="@drawable/food_back">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fifth_album"
                    android:textSize="30sp"                    android:padding="25dp"
                    android:fontFamily="casual"/>

                <Button
                    android:id="@+id/fifth_album"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:text="@string/show"
                    android:padding="20dp"
                    android:layout_alignParentBottom="true"/>

            </RelativeLayout>
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/marivram_logo"
                android:layout_marginTop="-5dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/app_name" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>